--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: '16'
 
     - name: Install dependencies
-      run: npm install
+      uses: bahmutov/npm-install@v2
 
     - name: Build the project
       run: npm run build
