--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: '20'
 
     - name: Install dependencies
-      uses: bahmutov/npm-install@v2
+      run: npm install
 
     - name: Build the project
       run: npm run build
