--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,16 @@ jobs:
       run: npm install
 
     - name: Build the project
-      run: npm run build
+      run: |
+          npm run build
+          pwd
+          ls -R
 
     - name: Upload Production Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: production-files
-        path: ./dist
+        path: ./alfredo-del-rayo-project/dist
   
   deploy:
     name: Deploy 
