--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,10 +45,10 @@ jobs:
 
     steps:
     - name: Download Production Artifacts
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         name: production-files
-        path: ./dist
+        path: ./alfredo-del-rayo-project/dist
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
