--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
 
     - name: Install dependencies
       uses: bahmutov/npm-install@v1
+      with:
+        path: ./alfredo-del-rayo-project
 
     - name: Build the project
       run: npm run build
