--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       uses: bahmutov/npm-install@v1
       with:
-        path: ./alfredo-del-rayo-project
+        working-directory: ./alfredo-del-rayo-project
 
     - name: Build the project
       run: npm run build
